Consertando o criarentregador e alterando a verificação de id por email